--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-**/a.out
-**/*.o
-**/tmp**
 **/**tmp
-**/sample
+**/tmp**
+**/actual
+**/expected
+**/*Cmake*
+**/*.s
+**/*.d
+**/*.o
+**/a.out
+**/**2.tpp
+**/**2.cpp
+**/**2.hpp
+/ex02
+**/**idea
+**/idea**
+**/**idea**
