order is not important

--- a/new/src/Makefile
+++ b/new/src/Makefile
@@ -79,6 +79,10 @@ dok: all
 	@./$(NAME) ../test/ok/dup.cub
 	@echo $(green)"[Priority is given to the one below]"$(no)
 
+cok: all
+	@./$(NAME) ../test/ok/jumbled_order.cub
+	@echo $(green)"[order is not important]"$(no)
+
 ###########[ko case]#############
 ako: all
 	@echo $(green)"[not nbrs case]"$(no)
