--- a/src/Makefile
+++ b/src/Makefile
@@ -38,31 +38,19 @@ fclean: clean
 
 re:	fclean all
 
-norm:
-	@norminette $(srcs) $(headers) > /dev/null
-	@echo $(green)"norm OK!"$(no)
-
-#################[easy compile && debug]####################
-success1: all
-	cat ../test/normal/00_simple_20_13.cub
-	./$(NAME) ../test/normal/00_simple_20_13.cub
-
-success2: all
-	cat ../test/normal/06_maxsize_256_256.cub
-	./$(NAME) ../test/normal/06_maxsize_256_256.cub
-
-failure1: all
-	cat ../test/error/06_rgb_many_20_13.cub
-	./$(NAME) ../test/error/06_rgb_many_20_13.cub
-
-failure2: all
-	cat ../test/error/08_design_invalid_color_20_13.cub
-	./$(NAME) ../test/error/08_design_invalid_color_20_13.cub
 
 leaks: all
 	leaks -q --atExit -- ./$(NAME) ../test/test0.cub
 
 test: all
 	bash ../test/test.sh
+
+norm:
+	chmod -R 777 ../test/norm.sh
+	bash ../test/norm.sh
+
+#norm:
+#	@norminette $(srcs) $(headers) > /dev/null
+#	@echo $(green)"norm OK!"$(no)
 
 .PHONY: all clean fclean mlx re test leaks
