sanitizerで一つ怒られるもののあとはbug飲み

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ mlxmake = make -C $(mlxpath)
 CFLAGS = -Wextra
 
 #######まさかのsanitizerをつけないとプログラムが正常に動かない#$
-debug_flag = -g3 -fsanitize=address
+#debug_flag = -g3 -fsanitize=addresss
 CC = cc
 
 ifeq ($(MAKECMDGOALS), test)
