--- a/src/Makefile
+++ b/src/Makefile
@@ -8,10 +8,10 @@ objs = $(srcs:.c=.o)
 mlxpath = ./mlx_linux/
 mlxflag = -Lmlx_linux -lmlx -Imlx_linux -lXext -lX11 -lm -L/usr/X11R6/lib
 mlxmake = make -C $(mlxpath)
-CFLAGS = -Wextra
+CFLAGS = -Wextra -Werror -Wextra
 
 #######まさかのsanitizerをつけないとプログラムが正常に動かない#$
-#debug_flag = -g3 -fsanitize=address
+debug_flag = -g3 -fsanitize=address
 CC = cc
 
 ifeq ($(MAKECMDGOALS), test)
